--- a/Front-Central/src/app/components/consultas/consultas.component.html
+++ b/Front-Central/src/app/components/consultas/consultas.component.html
@@ -4,11 +4,12 @@
       <h2>Gestión de Consultas Externas</h2>
     </div>
     <div class="card-body">
-      <form (ngSubmit)="enviarConsulta()" class="row g-3">
+      <form class="row g-3">
         <div class="col-md-6">
           <label class="form-label">Selecciona el Hospital</label>
           <select
             [(ngModel)]="hospitalIdSeleccionado"
+            (ngModelChange)="onHospitalSeleccionado()"
             name="hospitalIdSeleccionado"
             class="form-select"
             required
@@ -26,67 +27,6 @@
             (click)="cargarConsultas()"
           >
             Cargar Consultas
-          </button>
-        </div>
-
-        <div class="col-md-4">
-          <label class="form-label">Fecha</label>
-          <input
-            type="date"
-            class="form-control"
-            [(ngModel)]="nuevoConsulta.fecha"
-            name="fecha"
-            required
-          />
-        </div>
-
-        <div class="col-md-4">
-          <label class="form-label">Diagnóstico</label>
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="nuevoConsulta.diagnostico"
-            name="diagnostico"
-            required
-          />
-        </div>
-
-        <div class="col-md-4">
-          <label class="form-label">Tratamiento</label>
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="nuevoConsulta.tratamiento"
-            name="tratamiento"
-            required
-          />
-        </div>
-
-        <div class="col-md-6">
-          <label class="form-label">ID Médico</label>
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="nuevoConsulta.medicoId"
-            name="medicoId"
-            required
-          />
-        </div>
-
-        <div class="col-md-6">
-          <label class="form-label">ID Paciente</label>
-          <input
-            type="text"
-            class="form-control"
-            [(ngModel)]="nuevoConsulta.pacienteId"
-            name="pacienteId"
-            required
-          />
-        </div>
-
-        <div class="col-12 d-flex justify-content-end mt-3">
-          <button type="submit" class="btn btn-success me-2">
-            <i class="bi bi-send"></i> Enviar Consulta
           </button>
         </div>
       </form>
