Se mejoro el diseño

--- a/Front-Central/src/app/app.component.html
+++ b/Front-Central/src/app/app.component.html
@@ -1,16 +1,29 @@
 <mat-drawer-container autosize="true" class="drawer-container">
-  <mat-drawer mode="side" [(opened)]="isSidenavOpen" class="drawer" fixedInViewport="true">
-  <div class="opciones">
-    <h3>Opciones</h3>
-</div>
-<div>
-    <jlop-menu></jlop-menu>
-</div>
+  <!-- Menú lateral visible solo si hay sesión -->
+  <mat-drawer
+    mode="side"
+    [(opened)]="isSidenavOpen"
+    class="drawer"
+    fixedInViewport="true"
+    *ngIf="authService.isLoggedIn()"
+  >
+    <div class="opciones">
+      <h3>Opciones</h3>
+    </div>
+    <div>
+      <jlop-menu></jlop-menu>
+    </div>
+  </mat-drawer>
 
-</mat-drawer>
-  
-  <mat-drawer-content autosize="true">
-    <app-header (toggleSidenav)="toggleSidenav()"></app-header>
+  <!-- Contenido principal -->
+  <mat-drawer-content autosize="true" [ngClass]="{ 'fondo-login': esLogin() }">
+    <!-- Header solo si hay sesión -->
+    <app-header
+      *ngIf="authService.isLoggedIn()"
+      (toggleSidenav)="toggleSidenav()"
+    ></app-header>
+
+    <!-- Router outlet siempre presente -->
     <div class="main-content">
       <router-outlet></router-outlet>
     </div>
