--- a/Front-Central/src/app/core/components/inicio/inicio.component.html
+++ b/Front-Central/src/app/core/components/inicio/inicio.component.html
@@ -1,5 +1,16 @@
-<div class="card">
-    <h1>Calculadora Inmobiliaria</h1>
-    <p>Escoja una opción en el menú</p>
+<div class="hospital-landing">
+  <!-- Texto informativo -->
+  <div class="left-info">
+    <h1>Bienvenido al Sistema Hospitalario Central</h1>
+    <p>
+      Administre consultas externas, médicos, especialidades y hospitales desde una
+      única plataforma distribuida y eficiente.
+    </p>
+    <button (click)="irAGestion()" class="action-btn">Ir a Gestión</button>
   </div>
-  
+
+  <!-- Imagen hospitalaria -->
+  <div class="right-image">
+    <img src="../../../../assets/image/hospital-central.jpg.jpg" alt="Hospital Central" />
+  </div>
+</div>
