--- a/Front-Central/src/app/shared/components/header/header.component.html
+++ b/Front-Central/src/app/shared/components/header/header.component.html
@@ -1,13 +1,22 @@
-<mat-toolbar>
-    <button mat-icon-button (click)="toggleSidenav.emit()">
-        <mat-icon style="color: white;">menu</mat-icon>
-      </button>
+<mat-toolbar color="primary">
+  <button mat-icon-button (click)="toggleSidenav.emit()">
+    <mat-icon>menu</mat-icon>
+  </button>
 
-    <mat-menu #menu="matMenu">
-        <button mat-menu-item (click)="singOut()">
-            <mat-icon>logout</mat-icon>
-        <span>Cerrar Sesion</span>
-        </button>
-        
-    </mat-menu>
+  <span class="spacer"></span>
+
+  <span style="margin-right: 10px; color: white">
+    Bienvenido, {{ nombreUsuario }}
+  </span>
+
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>account_circle</mat-icon>
+  </button>
+
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="signOut()">
+      <mat-icon>logout</mat-icon>
+      <span>Cerrar Sesión</span>
+    </button>
+  </mat-menu>
 </mat-toolbar>
